[gd_scene format=3 uid="uid://diakgc6ppskod"]

[ext_resource type="Script" uid="uid://c6p1cfwke71in" path="res://Deniza/Events/scripts/EventPopup.gd" id="1_ryrxf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fl6eh"]
bg_color = Color(0.1254902, 0.1254902, 0.1254902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_fl6eh"]
font_size = 32

[node name="EventPopup" type="CanvasLayer" unique_id=1673635078]
script = ExtResource("1_ryrxf")

[node name="BackgroundDim" type="ColorRect" parent="." unique_id=1000512990]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5019608)

[node name="Window" type="PanelContainer" parent="." unique_id=1288386501]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fl6eh")

[node name="MarginContainer" type="MarginContainer" parent="Window" unique_id=781210495]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Content" type="VBoxContainer" parent="Window/MarginContainer" unique_id=1876454685]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Window/MarginContainer/Content" unique_id=1569191170]
layout_mode = 2
text = "EVENT ALERT!!!"
label_settings = SubResource("LabelSettings_fl6eh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Window/MarginContainer/Content" unique_id=1256134355]
layout_mode = 2

[node name="DescLabel" type="Label" parent="Window/MarginContainer/Content" unique_id=1914088235]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Something bad happened..."
autowrap_mode = 2

[node name="CloseButton" type="Button" parent="Window/MarginContainer/Content" unique_id=1288375776]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "I understand"

[connection signal="pressed" from="Window/MarginContainer/Content/CloseButton" to="." method="_on_close_button_pressed"]
